# SIT-LMPC

./: Dockerfile  README.md  pyproject.toml
sit_lmpc/: learned_dyna_model.py  model_train.py  run_mppi_tracking.py  run_racecar.py
sit_lmpc/config/: exp_config.yaml  value_config.yaml
sit_lmpc/maps/custom1/: custom1_map.yaml  custom1_raceline.csv
sit_lmpc/maps/custom2/: custom2_map.yaml
sit_lmpc/maps/tough/: tough_map.yaml
sit_lmpc/models/: bijectors.py  networks.py  nsf.py
sit_lmpc/planners/dynamics_models/: dynamics_models_jax.py  mb_model_params.py
sit_lmpc/planners/lmppi/: infer_env.py  lmppi.py  mppi_tracking.py  safe_set.py  value_fn.py
sit_lmpc/results/f1_map1/f1_r0_dynamic_ST_map1_steps10/: config.yaml  f1_r0_dynamic_ST_map1_steps10.txt  init.npz  value_config.yaml
sit_lmpc/results/f1_map1/f1_r0_dynamic_ST_map1_steps10/valuefn_model_best/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
sit_lmpc/results/f1_map1/f1_r0_dynamic_ST_map1_steps10/valuefn_model_best/array_metadatas/: process_0
sit_lmpc/results/f1_map1/f1_r0_dynamic_ST_map1_steps10/valuefn_model_best/ocdbt.process_0/: manifest.ocdbt
sit_lmpc/utils/: mppi_renderers.py  plottings.py  trainer_jax.py
sit_lmpc/utils/track_jax/: cubic_spline.py  raceline.py  track.py  utils.py
