[project]
name = "sit-lmpc"
version = "0.1.0"
description = ""
authors = [
    {name = "zzangupenn",email = "zzang@seas.upenn.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12] (>=0.6.2,<0.7.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "flax (>=0.10.6,<0.11.0)",
    "optax (>=0.2.5,<0.3.0)",
    "distrax (>=0.1.5,<0.2.0)",
    "pynput (>=1.7.6,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
